# target-vertica-flex

./: .gitignore  README.md  docker-compose.yml1  etc.txt  meltano.yml  pyproject.toml
.meltano/: analytics.json  meltano.db
etc/: ab10.json  ab11.json  ab2.json  ab4.json  ab4a.json  ab5a.json  ab8.json  ab9.json  config.init.json  config.init1.json  data.json
target_vertica_flex/: __init__.py  connector.py  sinks.py  target.py
target_vertica_flex.TargetPostgres/: target.py
target_vertica_flex.after.replace/: __init__.py  connector.py  sinks.py  target.py
target_vertica_flex.latest/: connector.py  sinks.py  target.py
target_vertica_flex1/: connector.py  sinks.py  target.py
